# projeto_persistencia

./: .env  Divisão de Tarefas.docx  README.md  assis_tec.db  compac_arquivo.py  cria_hash.py  crud_assistencia_tec.py  database_config.py  dispositivo.csv  dispositivo.py  divisao_tarefas.txt  home.py  main.py  manip_csv.py  peca.py  pyproject.toml  responses.py  servico.py  tecnico.py  tecnico_servico.py
Entrega-1/: compac_arquivo.py  count_registros_csv.py  cria_hash.py  dispositivos.csv  divisao_tarefas.txt  main.py  manip_csv.py  pyproject.toml
Entrega-2/: .env  Divisão de tarefas.txt  README.md  assis_tec.db  database_config.py  hello.py  main.py  pyproject.toml
Entrega-2/models/: dispositivo.py  peca.py  tecnico_servico.py
Entrega-2/routes/: dispositivo.py  home.py  peca.py  responses.py  servico.py  tecnico.py
Entrega-3/: Divisão_tarefas.txt  README.md  database.py  main.py  pyproject.toml
Entrega-3/models/: models.py
Entrega-3/routes/: dispositivo.py  home.py  peca.py  servico.py  tecnico.py
arquivos_de_teste/: main.py
